# codexify-platform

./: .gitignore  README.md  render.yaml  wrangler.jsonc
codeguard-ai/: README.md  _redirects  app.js  codexfy.js  data.js  engine.js  index.html  landing.html  netlify.toml  styles.css  vercel.json
codeguard-api/: .env.example  pyproject.toml  pyrightconfig.json  requirements.txt
codeguard-api/app/: config.py  dependencies.py  main.py
codeguard-api/app/api/v1/: analyses.py  auth.py  billing.py  dashboard.py  merge_requests.py  organizations.py  public_api.py  repositories.py  router.py  rules.py  upload.py  webhooks.py
codeguard-api/app/core/: exceptions.py  security.py
codeguard-api/app/db/: client.py
codeguard-api/app/db/migrations/: 001_initial_schema.sql  002_builtin_rules.sql  003_billing_plans.sql  004_analysis_progress.sql
codeguard-api/app/models/: analysis.py  merge_request.py  organization.py  repository.py  rule.py  user.py
codeguard-api/app/schemas/: claude_prompts.py
codeguard-api/app/services/: ai_factory.py  analysis_service.py  billing_service.py  claude_service.py  email_service.py  git_platform_factory.py  github_service.py  gitlab_service.py  openai_service.py  rule_service.py  webhook_service.py
codeguard-api/app/workers/: __init__.py  analysis_worker.py  sync_worker.py
codeguard-api/tests/: test_claude_service.py  test_github_service.py  test_repositories.py
